# espeak-ng

./: CMakeLists.txt
.github/workflows/: ci.yml  dist.yml
android/: build.gradle
android/eSpeakTests/res/values/: strings.xml
android/jni/: CMakeLists.txt
android/jni/jni/: eSpeakService.c
android/res/values/: donottranslate.xml
android/src/com/reecedunn/espeak/: TtsService.java
cmake/: config.cmake  data.cmake
src/: CMakeLists.txt  espeak-ng.c
src/libespeak-ng/: CMakeLists.txt  config.h.in  event.c  fifo.c  mbrowrap.c
src/speechPlayer/: CMakeLists.txt
tests/: CMakeLists.txt  common  ssml.test
